--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "boom": "^7.3.0",
+    "date-fns": "^1.30.1",
     "hapi": "^18.1.0",
     "hapi-jsonwebtoken": "^1.1.0",
     "joi": "^14.3.1",
