update npm packages

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "boom": "^7.3.0",
-    "hapi": "^18.1.0",
+    "@hapi/hapi": "^21.3.2",
     "hapi-jsonwebtoken": "^1.1.0",
-    "joi": "^14.3.1",
-    "knex": "^0.16.3",
-    "luxon": "^1.12.1",
-    "pg": "^7.9.0"
+    "joi": "^17.11.0",
+    "knex": "^3.0.1",
+    "luxon": "^3.4.4",
+    "pg": "^8.11.3"
   }
 }
