--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "author": "Tiina Koskiranta",
   "license": "ISC",
   "dependencies": {
-    "boom": "^7.3.0",
     "@hapi/hapi": "^21.3.2",
+    "boom": "^7.3.0",
     "hapi-jsonwebtoken": "^1.1.0",
     "joi": "^17.11.0",
     "knex": "^3.0.1",
     "luxon": "^3.4.4",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.0"
   }
 }
